--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marcello Nasso Architect</title>
+    <link rel="icon" type="image/png" href="../assets/img/icons/favicon.png">
     <link rel="stylesheet" href="../css/landing-page.css">
 </head>
 <body>
     <div class="image-wrapper">
-        <img class="slide" src="../assets/landing-page/img1.webp" alt="Cover Image">
-        <img class="slide" src="../assets/landing-page/img1.webp" alt="Cover Image" style="opacity: 0;">
+        <img class="slide" src="../assets/img/landing-page/img1.webp" alt="Cover Image">
+        <img class="slide" src="../assets/img/landing-page/img1.webp" alt="Cover Image" style="opacity: 0;">
         <div class="image-overlay"></div>
     </div>
     <div class="logo-wrapper">
         <div class="cross-symbol">+</div>
-        <img src="../assets/landing-page/mna-logo.png" alt="Logo">
+        <img src="../assets/img/mna-logo.png" alt="Logo">
     </div>
 </body>
-<script src="../js/landing-page.js"></script>
+<script type="module" src="../js/landing-page.js"></script>
+<script type="module" src="../js/get-projects.js"></script>
 </html>
