Important improve to the the homepage popup styles

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -15,10 +15,9 @@
     <div class="squares-container"></div>
 
     <div id="generic-popup" class="generic-popup popup-hidden">
-        <div id="popup-image" class="popup-image">
-            <button id="popup-close" class="popup-close">X</button>
-            <div id="popup-content" class="popup-content"></div>
-        </div>
+        <div id="popup-image" class="popup-image"></div>
+        <button id="popup-close" class="popup-close">X</button>
+        <div id="popup-content" class="popup-content"></div>
     </div>    
 </body>
 <script type="module" src="../js/get-projects.js"></script>
