Add interactive features to the logo in the landing page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,126 @@
     </div>
     <div class="logo-wrapper">
         <div class="cross-symbol">+</div>
-        <img src="../assets/img/mna-logo.png" alt="Logo">
+        <svg id="Ebene_1" data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 415.79 434.23">
+            <defs>
+                <style>
+                    .cls-1 {
+                        font-size: 25.51px;
+                    }
+
+                    .cls-1,
+                    .cls-2,
+                    .cls-3 {
+                        font-family: ArialMT, Arial;
+                    }
+
+                    .cls-2 {
+                        font-size: 25.51px;
+                    }
+
+                    .cls-3 {
+                        font-size: 33px;
+                    }
+                </style>
+            </defs>
+            <title>Marcello Nasso Architekten</title>
+            <text class="cls-1" transform="translate(117.79 234.61) rotate(-99.54)">•</text>
+            <text class="cls-1" transform="translate(116.34 225.67) rotate(-94.34)"></text>
+            <a xlink:href="mailto:info@marcellonasso.com">info@marcellonasso.com"&gt;
+                <text class="cls-1" transform="translate(115.82 218.38) rotate(-90.09)">i</text>
+                <text class="cls-1" transform="matrix(0.11, -0.99, 0.99, 0.11, 115.58, 212.66)">n</text>
+                <text class="cls-1" transform="matrix(0.23, -0.97, 0.97, 0.23, 117.36, 198.56)">f</text>
+                <text class="cls-1" transform="matrix(0.34, -0.94, 0.94, 0.34, 118.79, 191.58)">o</text>
+                <text class="cls-1" transform="matrix(0.54, -0.84, 0.84, 0.54, 122.93, 178.31)">@</text>
+                <text class="cls-1" transform="matrix(0.74, -0.68, 0.68, 0.74, 136.83, 157.04)">m</text>
+                <text class="cls-1" transform="translate(152.47 143.07) rotate(-31.42)">a</text>
+                <text class="cls-1" transform="translate(164.65 135.84) rotate(-24.09)">r</text>
+                <text class="cls-1" transform="translate(172.37 132.25) rotate(-17.26)">c</text>
+                <text class="cls-1" transform="translate(184.47 128.43) rotate(-8.79)">e</text>
+                <text class="cls-1" transform="translate(198.57 126.49) rotate(-2.4)">l</text>
+                <text class="cls-1" transform="translate(204.47 126.25) rotate(1.41)">l</text>
+                <text class="cls-1" transform="translate(210.22 126.16) rotate(7.88)">o</text>
+                <text class="cls-1" transform="translate(224.14 128.07) rotate(16.93)">n</text>
+                <text class="cls-1" transform="translate(237.59 132.16) rotate(25.93)">a</text>
+                <text class="cls-1" transform="matrix(0.82, 0.57, -0.57, 0.82, 250.24, 138.36)">s</text>
+                <text class="cls-1" transform="translate(260.72 145.54) rotate(42.56)">s</text>
+                <text class="cls-1" transform="matrix(0.63, 0.78, -0.78, 0.63, 270.09, 154.07)">o</text>
+                <text class="cls-1" transform="translate(278.82 165.23) rotate(58.01)">.</text>
+                <text class="cls-1" transform="translate(282.73 171.21) rotate(64.45)">c</text>
+                <text class="cls-1" transform="translate(288.25 182.62) rotate(73.05)">o</text>
+                <text class="cls-1" transform="translate(292.67 195.88) rotate(84.11)">m</text>
+            </a>
+            <text class="cls-1" transform="matrix(-0.05, 1, -1, -0.05, 294.3, 216.89)"></text>
+            <text class="cls-1" transform="translate(293.94 224.11) rotate(98.41)">•</text>
+            <text class="cls-2" transform="translate(99.57 242.05) rotate(74.24)"></text>
+            <a xlink:href="tel:+410794543812">
+                <text class="cls-2" transform="translate(101.96 250.92) rotate(67.33)">+</text>
+                <text class="cls-2" transform="matrix(0.53, 0.85, -0.85, 0.53, 108.91, 266.96)">4</text>
+                <text class="cls-2" transform="translate(117.89 281.07) rotate(49.31)">1</text>
+                <text class="cls-2" transform="matrix(0.74, 0.68, -0.68, 0.74, 128.71, 293.15)"></text>
+                <text class="cls-2" transform="matrix(0.79, 0.61, -0.61, 0.79, 135.15, 299.02)">(</text>
+                <text class="cls-2" transform="translate(143.56 305.56) rotate(30.51)">0</text>
+                <text class="cls-2" transform="translate(157.76 313.56) rotate(23.41)">)</text>
+                <text class="cls-2" transform="translate(167.51 317.83) rotate(16.27)">7</text>
+                <text class="cls-2" transform="translate(183.61 322.33) rotate(7.38)">9</text>
+                <text class="cls-2" transform="translate(199.74 324.09) rotate(0.61)"></text>
+                <text class="cls-2" transform="translate(208.9 324.27) rotate(-6.13)">4</text>
+                <text class="cls-2" transform="translate(225.46 322.3) rotate(-14.87)">5</text>
+                <text class="cls-2" transform="matrix(0.92, -0.4, 0.4, 0.92, 241.56, 317.82)">4</text>
+                <text class="cls-2" transform="translate(256.29 311) rotate(-30.46)"></text>
+                <text class="cls-2" transform="translate(264.22 306.44) rotate(-37.22)">3</text>
+                <text class="cls-2" transform="translate(277.41 296.16) rotate(-46.09)">8</text>
+                <text class="cls-2" transform="translate(288.42 284.26) rotate(-52.79)"></text>
+                <text class="cls-2" transform="matrix(0.51, -0.86, 0.86, 0.51, 294, 277.05)">1</text>
+                <text class="cls-2" transform="matrix(0.37, -0.93, 0.93, 0.37, 302.32, 262.57)">2</text>
+            </a>
+            <a xlink:href="https://goo.gl/maps/UpFnUehKCJz" target="_blank">
+                <text class="cls-3" transform="matrix(0.62, 0.78, -0.78, 0.62, 84.32, 304.53)">•</text>
+                <text class="cls-3" transform="matrix(0.68, 0.73, -0.73, 0.68, 92.72, 314.97)"></text>
+                <text class="cls-3" transform="translate(98.36 321.35) rotate(41.95)">8</text>
+                <text class="cls-3" transform="translate(114.28 335.38) rotate(33.73)">0</text>
+                <text class="cls-3" transform="translate(132.02 346.98) rotate(25.56)">0</text>
+                <text class="cls-3" transform="translate(151.23 355.94) rotate(17.42)">8</text>
+                <text class="cls-3" transform="translate(171 361.76) rotate(11.28)"></text>
+                <text class="cls-3" transform="translate(182.31 364.2) rotate(4.76)">Z</text>
+                <text class="cls-3" transform="translate(205.7 366.02) rotate(-4.94)">Ü</text>
+                <text class="cls-3" transform="translate(232.94 363.34) rotate(-15.5)">R</text>
+                <text class="cls-3" transform="translate(258.21 355.67) rotate(-22.89)">I</text>
+                <text class="cls-3" transform="translate(269.24 351.34) rotate(-30.25)">C</text>
+                <text class="cls-3" transform="translate(292.67 337.32) rotate(-40.63)">H</text>
+                <text class="cls-3" transform="translate(312.31 319.62) rotate(-48)"></text>
+
+                <text class="cls-3" transform="matrix(0.62, -0.78, 0.78, 0.62, 317.75, 313.69)">•</text>
+
+                <text class="cls-3" transform="translate(98.38 283.87) rotate(-116.48)">M</text>
+                <text class="cls-3" transform="translate(86.54 259.63) rotate(-105.33)">A</text>
+                <text class="cls-3" transform="translate(80.72 238.82) rotate(-94.96)">R</text>
+                <text class="cls-3" transform="translate(78.65 215.53) rotate(-84.27)">C</text>
+                <text class="cls-3" transform="translate(81.03 192.24) rotate(-74.03)">E</text>
+                <text class="cls-3" transform="translate(87.11 171.44) rotate(-64.97)">L</text>
+                <text class="cls-3" transform="matrix(0.55, -0.84, 0.84, 0.55, 94.75, 155.03)">L</text>
+                <text class="cls-3" transform="translate(104.35 139.81) rotate(-46.68)">O</text>
+                <text class="cls-3" transform="matrix(0.78, -0.63, 0.63, 0.78, 122.2, 121.69)"></text>
+                <text class="cls-3" transform="matrix(0.85, -0.52, 0.52, 0.85, 128.93, 115.67)">N</text>
+                <text class="cls-3" transform="translate(148.95 103.51) rotate(-21.1)">A</text>
+                <text class="cls-3" transform="matrix(0.98, -0.19, 0.19, 0.98, 169.1, 95.69)">S</text>
+                <text class="cls-3" transform="matrix(1, -0.02, 0.02, 1, 190.31, 91.49)">S</text>
+                <text class="cls-3" transform="translate(211.89 90.83) rotate(9.48)">O</text>
+                <text class="cls-3" transform="matrix(0.95, 0.3, -0.3, 0.95, 236.87, 95.55)"></text>
+                <text class="cls-3" transform="matrix(0.92, 0.4, -0.4, 0.92, 243.98, 97.3)">A</text>
+                <text class="cls-3" transform="translate(263.81 105.82) rotate(33.9)">R</text>
+                <text class="cls-3" transform="matrix(0.71, 0.7, -0.7, 0.71, 283.26, 118.83)">C</text>
+                <text class="cls-3" transform="matrix(0.57, 0.82, -0.82, 0.57, 299.91, 135.25)">H</text>
+                <text class="cls-3" transform="translate(312.95 154.95) rotate(62.75)">I</text>
+                <text class="cls-3" transform="translate(317.4 162.86) rotate(69.43)">T</text>
+                <text class="cls-3" transform="translate(324.47 181.39) rotate(79)">E</text>
+                <text class="cls-3" transform="translate(328.62 202.61) rotate(88.94)">K</text>
+                <text class="cls-3" transform="matrix(-0.15, 0.99, -0.99, -0.15, 328.98, 224.26)">T</text>
+                <text class="cls-3" transform="translate(326.18 243.87) rotate(107.84)">E</text>
+                <text class="cls-3" transform="matrix(-0.47, 0.88, -0.88, -0.47, 319.68, 264.47)">N</text>
+            </a>
+
+        </svg>
     </div>
 </body>
 <script type="module" src="../js/landing-page.js"></script>
