Update address in the landing page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -88,7 +88,7 @@
                 <text class="cls-2" transform="matrix(0.51, -0.86, 0.86, 0.51, 294, 277.05)">1</text>
                 <text class="cls-2" transform="matrix(0.37, -0.93, 0.93, 0.37, 302.32, 262.57)">2</text>
             </a>
-            <a xlink:href="https://goo.gl/maps/UpFnUehKCJz" target="_blank">
+            <a xlink:href="https://maps.app.goo.gl/oazRh2y8DxRmMDsP9" target="_blank">
                 <text class="cls-3" transform="matrix(0.62, 0.78, -0.78, 0.62, 84.32, 304.53)">•</text>
                 <text class="cls-3" transform="matrix(0.68, 0.73, -0.73, 0.68, 92.72, 314.97)"></text>
                 <text class="cls-3" transform="translate(98.36 321.35) rotate(41.95)">8</text>
