--- a/src/html/project-details.html
+++ b/src/html/project-details.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marcello Nasso Project</title>
     <link rel="icon" type="image/png" href="../assets/img/mna-logo.png" />
+    <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery.js/dist/css/lightgallery.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/lightgallery.js/dist/js/lightgallery.min.js"></script>
     <link rel="stylesheet" href="../css/project-details.css" />
   </head>
   <body>
@@ -39,16 +41,24 @@
         </section>
 
         <!-- Dynamic image gallery -->
-        <section class="image-gallery" id="project-gallery"></section>
+        <section class="image-gallery" id="project-gallery">
+            <!-- Images will be dynamically inserted here -->
+        </section>
 
         <!-- Dynamic video embed -->
         <iframe id="project-video" frameborder="0" allowfullscreen sandbox="allow-scripts allow-forms allow-same-origin" class="video"></iframe>
 
         <footer class="footer">
             <div class="navigation">
-                <img src="../assets/img/icons/mna-logo.png" alt="Phase 1 Logo" />
-                <img src="../assets/img/icons/mna-logo.png" alt="Phase 2 Logo" />
-                <img src="../assets/img/icons/mna-logo.png" alt="Phase 3 Logo" />
+                <a href="/src/html/home.html">
+                    <img src="../assets/img/icons/phi.png" alt="Phase 1 Logo"/>
+                  </a>
+                  <a href="/src/html/home.html">
+                      <img src="../assets/img/icons/gamma.png" alt="Phase 2 Logo" />
+                  </a>
+                  <a href="/src/html/home.html">
+                      <img src="../assets/img/icons/sigma.png" alt="Phase 3 Logo" />
+                  </a>
             </div>
         </footer>
     </div>
