Add a todo for the projectboard

--- a/src/html/project-details.html
+++ b/src/html/project-details.html
@@ -48,6 +48,8 @@
         <!-- Dynamic video embed -->
         <iframe id="project-video" frameborder="0" allowfullscreen sandbox="allow-scripts allow-forms allow-same-origin" class="video"></iframe>
 
+        <!--TODO: ADD HERE THE PROJECTBOARD-->
+
         <footer class="footer">
             <div class="navigation">
                 <a href="/src/html/home.html">
