Clean the projects popup styles in the home

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -16,7 +16,7 @@
 
     <div id="generic-popup" class="generic-popup popup-hidden">
         <div id="popup-image" class="popup-image"></div>
-        <button id="popup-close" class="popup-close">X</button>
+        <button id="popup-close" class="popup-close">+</button>
         <div id="popup-content" class="popup-content"></div>
     </div>    
 </body>
