--- a/src/html/project-details.html
+++ b/src/html/project-details.html
@@ -15,7 +15,7 @@
     <div class="container">
       <header class="header">
         <div class="image-overlay-container">
-          <img class="img-overlay" id="project-image" alt="Project Image">
+          <img class="img-overlay" id="project-image">
           <div class="overlay"></div>
           <h2 class="overlay-text" id="project-name">Loading Project...</h2>
           <a href="/src/html/home.html" class="overlay-button back-home-button">
